k3s-vbox/gl-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    prometheus.io/port: "3001"
    prometheus.io/scrape: "true"
  creationTimestamp: "2021-08-09T03:36:27Z"
  generateName: mojaloop-centralledger-service-7cd7774d75-
  labels:
    app.kubernetes.io/instance: mojaloop
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: centralledger-service
    app.kubernetes.io/version: 12.1.0
    helm.sh/chart: centralledger-service-12.1.0
    pod-template-hash: 7cd7774d75
  name: mojaloop-centralledger-service-7cd7774d75-dzts7
  namespace: ml-app
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: mojaloop-centralledger-service-7cd7774d75
    uid: 87f81b92-2b5b-4f85-906c-ceb4f82c806f
  resourceVersion: "3603"
  uid: e0fc9f9f-6ac8-47b4-b4a1-9b29fdae274c
spec:
  containers:
  - command:
    - node
    - src/api/index.js
    env:
    - name: LOG_LEVEL
      value: info
    - name: LOG_FILTER
      value: error, warn, info
    - name: CSL_LOG_TRANSPORT
      value: file
    - name: EVENT_SDK_LOG_FILTER
      value: audit:*, log:warn, log:error
    - name: EVENT_SDK_LOG_METADATA_ONLY
      value: "false"
    - name: EVENT_SDK_VENDOR_PREFIX
      value: mojaloop
    - name: EVENT_SDK_TRACESTATE_HEADER_ENABLED
      value: "true"
    - name: EVENT_SDK_ASYNC_OVERRIDE_EVENTS
      value: log,trace
    - name: EVENT_SDK_TRACEID_PER_VENDOR
      value: "false"
    - name: LIB_RESOURCE_VERSIONS
      value: transfers=1.0,participants=1.0,quotes=1.0
    image: mojaloop/central-ledger:v13.1.1
    imagePullPolicy: IfNotPresent
    livenessProbe:
      failureThreshold: 3
      httpGet:
        path: /health
        port: 3001
        scheme: HTTP
      initialDelaySeconds: 60
      periodSeconds: 15
      successThreshold: 1
      timeoutSeconds: 1
    name: centralledger-service
    ports:
    - containerPort: 3001
      name: http-api
      protocol: TCP
    readinessProbe:
      failureThreshold: 3
      httpGet:
        path: /health
        port: 3001
        scheme: HTTP
      initialDelaySeconds: 60
      periodSeconds: 15
      successThreshold: 1
      timeoutSeconds: 1
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/central-ledger/config
      name: mojaloop-centralledger-service-config-volume
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ph4vv
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  initContainers:
  - command:
    - sh
    - -c
    - until mysql -h mysql-cl -P 3306 -u central_ledger --password=password  central_ledger   -e
      'select version()' ; do echo waiting for MySQL; sleep 2; done;
    image: mysql:latest
    imagePullPolicy: IfNotPresent
    name: wait-for-mysql
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ph4vv
      readOnly: true
  - command:
    - sh
    - -c
    - npm run migrate
    env:
    - name: CLEDG_MIGRATIONS__RUN_DATA_MIGRATIONS
      value: "true"
    image: mojaloop/central-ledger:v13.1.1
    imagePullPolicy: IfNotPresent
    name: run-migration
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /opt/central-ledger/config
      name: mojaloop-centralledger-service-config-volume
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-ph4vv
      readOnly: true
  nodeName: vagrant
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - configMap:
      defaultMode: 420
      items:
      - key: default.json
        path: default.json
      - key: knexfile.js
        path: knexfile.js
      name: mojaloop-centralledger-service-config
    name: mojaloop-centralledger-service-config-volume
  - name: kube-api-access-ph4vv
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2021-08-09T03:36:27Z"
    message: 'containers with incomplete status: [run-migration]'
    reason: ContainersNotInitialized
    status: "False"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2021-08-09T03:36:27Z"
    message: 'containers with unready status: [centralledger-service]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2021-08-09T03:36:27Z"
    message: 'containers with unready status: [centralledger-service]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2021-08-09T03:36:27Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - image: mojaloop/central-ledger:v13.1.1
    imageID: ""
    lastState: {}
    name: centralledger-service
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        reason: PodInitializing
  hostIP: 10.0.2.15
  initContainerStatuses:
  - containerID: containerd://133616abbe8527e1e8a6883ad364e7ecb5b71b4f1b14b34b93e3f15947c3da1f
    image: docker.io/library/mysql:latest
    imageID: docker.io/library/mysql@sha256:8b928a5117cf5c2238c7a09cd28c2e801ac98f91c3f8203a8938ae51f14700fd
    lastState: {}
    name: wait-for-mysql
    ready: true
    restartCount: 0
    state:
      terminated:
        containerID: containerd://133616abbe8527e1e8a6883ad364e7ecb5b71b4f1b14b34b93e3f15947c3da1f
        exitCode: 0
        finishedAt: "2021-08-09T03:41:35Z"
        reason: Completed
        startedAt: "2021-08-09T03:41:14Z"
  - containerID: containerd://2ccc6d793d09ca562a5c0e94e8535c4bd84ba0c3f48ebbd8179fef001b1c7f07
    image: docker.io/mojaloop/central-ledger:v13.1.1
    imageID: docker.io/mojaloop/central-ledger@sha256:3148f786d2dbbe2c58da80b10afe17f44390d9dc501c8621155368153fed89bd
    lastState:
      terminated:
        containerID: containerd://2ccc6d793d09ca562a5c0e94e8535c4bd84ba0c3f48ebbd8179fef001b1c7f07
        exitCode: 1
        finishedAt: "2021-08-09T03:58:48Z"
        reason: Error
        startedAt: "2021-08-09T03:58:46Z"
    name: run-migration
    ready: false
    restartCount: 8
    state:
      waiting:
        message: back-off 5m0s restarting failed container=run-migration pod=mojaloop-centralledger-service-7cd7774d75-dzts7_ml-app(e0fc9f9f-6ac8-47b4-b4a1-9b29fdae274c)
        reason: CrashLoopBackOff
  phase: Pending
  podIP: 10.42.0.41
  podIPs:
  - ip: 10.42.0.41
  qosClass: BestEffort
  startTime: "2021-08-09T03:36:27Z"
